<resources>
    <string name="app_name">App Practica 1</string>
    <string name="brand">Marca</string>
    <string name="header">Header</string>
    <string name="model">Modelo</string>
    <string name="color">Color</string>
    <string name="year">Año</string>
    <string name="register_save">Registro del auto guardado exitosamente</string>
    <string name="register_error">Error al guardar el registro del auto</string>
    <string name="tvBrand">Marca del auto</string>
    <string name="tvModel">Modelo del auto</string>
    <string name="tvColor">Color</string>
    <string name="tvYear">Año</string>
    <string name="no_registers">¡No hay registros!</string>
    <string name="add_element">Agregar elemento</string>
    <string name="rv_autos_description">Lista de autos registrados</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="auto">Auto</string>
    <string name="register_update">Actualizado exitosamente</string>
    <string name="register_error_update">Error al actualizar auto</string>
    <string name="register_delete">Registro eliminado exitosamente</string>
    <string name="register_error_delete">Error al eliminar el registro del auto</string>
    <string name="accept">Aceptar</string>
    <string name="delete_auto_confirm">¿Realmente deseas eliminar el auto %s?</string>
    <string name="confirmation">Confirmación</string>
    <string name="dialog1">dialog1</string>
    <string name="dialog2">dialog2</string>
</resources>